--- a/formula_EMascara.html
+++ b/formula_EMascara.html
@@ -104,54 +104,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
        <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-01_eye_LM-01.jpg" alt="Lengthening Mascara">
+      <img src="images/formula/52_Lengthening%20Mascara-01.jpg" alt="Lengthening Mascara">
             <div class="caption">
         <h3 class="FOh3">Lengthening Mascara<br></h3>
-        <p>● Extra fiber. Oil- and water-resistant. Washes off easily with warm water.</p>
+        <p>Extra fiber. Oil- and water-resistant. Washes off easily with warm water.</p>
             </div>
     </div>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-02_eye_VM-01.jpg" alt="Volumizing Mascara">
+      <img src="images/formula/53_Volumizing%20Mascara-01.jpg" alt="Volumizing Mascara">
             <div class="caption">
         <h3 class="FOh3">Volumizing Mascara<br></h3>
-        <p>● Instant fullness and dimension enhancement. Oil- and water-resistant. Washes easily with warm water.</p>
+        <p>Instant fullness and dimension enhancement. Oil- and water-resistant. Washes easily with warm water.</p>
             </div>
     </div>
-        </div>
-      <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/3-03_eye_2in1M-01.jpg" alt="2 in1 Mascara">
-            <div class="caption">
-        <h3 class="FOh3">2 in1 Mascara<br></h3>
-        <p>● The combination of Primer+mascara and two kinds of wands creates long, curly, and full lashes. Oil- and water-resistant. Washes easily with warm water.</p>
-            </div>
-    </div>
-        </div>   
-<!--old-->  
-     <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_eyes_32-01.jpg" alt="Base Mascara">
-            <div class="caption">
-        <h3 class="FOh3">Base Mascara<br></h3>
-        <p>● Fiber and essence added formula that nourishes, repairs, and protects your eyelashes. <br>      ● Wear it before the mascara for extra volume and protection.<br>
-         </p>
-            </div>
-    </div>
-        </div>
- 
-    <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_eyes_32-01.jpg" alt="Lash Essences">
-            <div class="caption">
-        <h3 class="FOh3">Lash Essences<br></h3>
-        <p>● Vitamin B5 and hyaluronic acid nourish eyelashes  and enhane growth.<br>
-        </p>
-            </div>
-    </div>
-        </div>
-         
+        </div>          
     </div>
 </div>
 
