--- a/formula_EYES.html
+++ b/formula_EYES.html
@@ -103,75 +103,118 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-04_eye_CE-01.jpg" alt="Cream Eyeshadow">
+      <img src="images/formula/56_Eyeshadow%20Roller-01.jpg" alt="Eyeshadow Roller">
             <div class="caption">
-        <h3 class="FOh3">Cream Eyeshadow<br></h3>
-        <p>● Water-resistant, light weight, and non-sticky. Gives you a frosty sheen.<br></p>
+        <h3 class="FOh3">Eyeshadow Roller<br></h3>
+        <p>Glittery shimmers in a roller packaging for easy application.<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-07_eye_LEG-01.jpg" alt="Liquid Eye Glitter">
-            <div class="caption">
-        <h3 class="FOh3">Liquid Eye Glitter<br></h3>
-        <p>● Liquid eye color full of glitters to instantly glamorize your eyes.<br></p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/3-08_eye_EyeshadowP-01.jpg" alt="Eyeshadow Palette">
-            <div class="caption">
-        <h3 class="FOh3">Eyeshadow Palette<br></h3>
-        <p>● A palette of metallic, matte, and glittery eyeshadows that allows you to create a multitude of chic looks.<br></p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/3-11_eye_SE-01.jpg" alt="Stylo Eyeshadow">
-            <div class="caption">
-        <h3 class="FOh3">Stylo Eyeshadow<br></h3>
-        <p>● Pearlescent shine that creates dimension. Smooth, blendable, and waterproof.<br></p>
-            </div>
-    </div>
-        </div>
-<!--old-->
-        <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_eyes_1-01.jpg" alt="Metallic Eyeshadow">
-            <div class="caption">
-        <h3 class="FOh3">Metallic Eyeshadow<br></h3>
-        <p>● Smooth and creamy texture that is easy to use and create shimmering and moisturizing eye make-up.  <br>      ● The silver ion sterilizers prolong the high quality of your eyeshadow, so you can enjoy it for longer.<br><br></p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_eyes_4-01.jpg" alt="Back-filling Eyeshadow">
-            <div class="caption">
-        <h3 class="FOh3">Back-filling Eyeshadow<br></h3>
-        <p>● Its inclusive formula is enriched with various pearly luminescence for 
-radiant eyes.  <br>      ● Added facial serum brings the long-lasting and bright eye look.<br>● Facial oil based formula creates a transparent and smooth effect.<br><br></p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_eyes_5-01.jpg" alt="Loose Eyeshadow">
+      <img src="images/formula/57_Loose%20Eyeshadow-01.jpg" alt="Loose Eyeshadow">
             <div class="caption">
         <h3 class="FOh3">Loose Eyeshadow<br></h3>
-        <p>● Unique high-pigment particles make the eyes shine like diamond.  <br>      ● Soft & delicate without any powder fallout.<br></p>
+        <p>With different grain diameter powder that reflects layered luster. Long lasting and  high-color release.<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_6-01.jpg" alt="Creamy Eyeshadow">
+      <img src="images/formula/66_Eyeshadow%20Palette-01.jpg" alt="Eyeshadow Palette">
             <div class="caption">
-        <h3 class="FOh3">Creamy Eyeshadow<br></h3>
-        <p>● Jelly texture eye make-up that hydrates all day.  <br>      ● It enhances transparency & natural radiant result.<br> ● Smooth texture and long-lasting moisturing effect so that your eyeshadow stays fresh all day.<br></p>
+        <h3 class="FOh3">Eyeshadow Palette<br></h3>
+        <p>A palette of metallic, matte, and glittery eyeshadows that allows you to create a multitude of chic looks.<br></p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/58_Pressed%20Glitter-01.jpg" alt="Pressed Glitter">
+            <div class="caption">
+        <h3 class="FOh3">Pressed Glitter<br></h3>
+        <p>High concentration of glitters for a sparkly diamond shine. Water-based, easy to remove. Paraben free.<br></p>
+            </div>
+    </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/59_Satin%20Cream%20Eyeshadow-01.jpg" alt="Satin Cream Eyeshadow">
+            <div class="caption">
+        <h3 class="FOh3">Satin Cream Eyeshadow<br></h3>
+        <p>High shimmers that gives your eyes an elegant sheen. Added plant & lanolin synthetic wax and Vitamin E to prevent dryness. Paraben free.</p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/60_Bouncy%20Cream%20Eyeshadow-01.jpg" alt="Bouncy Cream Eyeshadow">
+            <div class="caption">
+        <h3 class="FOh3">Bouncy Cream Eyeshadow<br></h3>
+        <p>Unique bouncy texture. Feels and looks like the finest silk. Paraben free.</p><br>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/61_Marbled%20Cream%20Eyeshadow-01.jpg" alt="Marbled Cream Eyeshadow">
+            <div class="caption">
+        <h3 class="FOh3">Marbled Cream Eyeshadow<br></h3>
+        <p>Water-resistant, light weight, and non-sticky. Gives you a frosty sheen.</p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/62_Eyeshadow%20Mousse-01.jpg" alt="Eyeshadow Mousse">
+            <div class="caption">
+        <h3 class="FOh3">Eyeshadow Mousse<br></h3>
+        <p>Light weight, silky, breathable.</p><br><br><br>
+            </div>         
+    </div>
+</div>
+              <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/63_Eyeshadow%20Jelly-01.jpg" alt="Eyeshadow Jelly">
+            <div class="caption">
+        <h3 class="FOh3">Eyeshadow Jelly<br></h3>
+        <p>A gel-cream hybrid. Soft jelly texture smoothly coats the eyes as spread.</p><br><br>
+            </div>         
+    </div>
+</div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/64_Glitter%20Liquid%20Eyeshadow-01.jpg" alt="Glitter Liquid Eyeshadow">
+            <div class="caption">
+        <h3 class="FOh3">Glitter Liquid Eyeshadow<br></h3>
+        <p>Liquid eye color full of glitters to instantly glamorize your eyes.</p>
+            </div>         
+    </div>
+</div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/64_Pearl%20Powder%20Liquid%20Eyeshadow-01.jpg" alt="Pearl Powder Liquid Eyeshadow">
+            <div class="caption">
+        <h3 class="FOh3">Pearl Powder Liquid Eyeshadow<br></h3>
+        <p>And opague liquid shimmer that is long wearing and waterproof. Non-smudging!</p>
+            </div>         
+    </div>
+</div>
+        <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/65_Stylo%20Eyeshadow-01.jpg" alt="Stylo Eyeshadow">
+            <div class="caption">
+        <h3 class="FOh3">Stylo Eyeshadow<br></h3>
+        <p>Pearlescent shine that creates dimension. Smooth, blendable, and waterproof.</p><br><br>
+            </div>         
+    </div>
+</div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/67_Baked%20Eyeshadow-01.jpg" alt="Baked Eyeshadow">
+            <div class="caption">
+        <h3 class="FOh3">Baked Eyeshadow<br></h3>
+        <p>High proportion of pearl powder. Brings a metal-like luxury makeup</p>
             </div>         
     </div>
 </div>
