--- a/formula_Eyebrow.html
+++ b/formula_Eyebrow.html
@@ -103,103 +103,102 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
        <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-16_eye_EbrowBP-01.jpg" alt="Eyebrow Palette">
+      <img src="images/formula/37_Brow%20Pomade-01.jpg" alt="Brow Pomade">
             <div class="caption">
-        <h3 class="FOh3">Eyebrow Palette<br></h3>
-        <p>● Trio shades for versatile looks. Fills and shapes your eyebrows beautifully.<br></p>
+        <h3 class="FOh3">Brow Pomade<br></h3>
+        <p>This silky cream formula is highly pigmented and hugs your brows effectively.<br></p>
             </div>
     </div>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-17_eye_EBKit-01.jpg" alt="Eyebrow Kit">
+      <img src="images/formula/38_Eyebrow%20Kit-01.jpg" alt="Eyebrow Kit">
             <div class="caption">
         <h3 class="FOh3">Eyebrow Kit<br></h3>
-        <p>● The wax grooms the brows while the powders fill and shape.<br></p>
+        <p>Delicate texture. Natural look. Matching the base cream to make the makeup more durable.<br></p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/39_Eyebrow%20Palette-01.jpg" alt="Eyebrow Palette">
+            <div class="caption">
+        <h3 class="FOh3">Eyebrow Palette<br></h3>
+        <p>Trio shades for versatile looks. Fills and shapes your eyebrows beautifully.<br><br></p>
             </div>
     </div>
         </div>
      <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-18_eye_EBP-01.jpg" alt="Eyebrow Pen">
+      <img src="images/formula/41_Eyebrow%20Pen-01.jpg" alt="Eyebrow Pen">
             <div class="caption">
         <h3 class="FOh3">Eyebrow Pen<br></h3>
-        <p>● Smooth and pigmented. Defines the brows with ease. Water-resistant and long lasting.<br></p>
+        <p>Smooth and pigmented. Defines the brows with ease. Water-resistant and long lasting.<br></p>
             </div>
     </div>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-19_eye_31EBP-01.jpg" alt="3 in1 Eyebrow Pen">
+      <img src="images/formula/42_3%20in1%20Eyebrow%20Pen-01.jpg" alt="3 in1 Eyebrow Pen">
             <div class="caption">
         <h3 class="FOh3">3 in1 Eyebrow Pen<br></h3>
-        <p>● Eyebrow pen, powder, and tint all in one!<br></p>
+        <p>Eyebrow pen, powder, and tint all in one!<br></p><br><br>
             </div>
     </div>
          </div>
      <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-21_eye_GBP-01.jpg" alt="Gel Brow Pen">
+      <img src="images/formula/45_Gel%20Brow%20Pen-01.jpg" alt="Gel Brow Pen">
             <div class="caption">
         <h3 class="FOh3">Gel Brow Pen<br></h3>
-        <p>● 2mm ultra fine tip for precise and animated brows. Water-resistant and non-smudging.<br></p>
+        <p>Super fine tip. Smooth texture. Naturally defined look. High airtight pen tube. Super waterproof oily formula. Long lasting. Sweat-resistant.<br></p>
             </div>
     </div>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-22_eye_POBT-01.jpg" alt="Peel-Off Brow Tint">
+      <img src="images/formula/47_Peel-Off%20Brow%20Tint-01.jpg" alt="Peel-Off Brow Tint">
             <div class="caption">
         <h3 class="FOh3">Peel-Off Brow Tint<br></h3>
-        <p>● Natural color tints that last long hours.<br><br><br></p>
+        <p>Natural color tints that last long hours.<br><br><br></p>
             </div>
     </div>
         </div>
          
           <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-24_eye_LBP-01.jpg" alt="Liquid Brow Pen">
+      <img src="images/formula/44_Microblading%20Brow%20Pen-01.jpg" alt="Microblading Brow Pen">
             <div class="caption">
-        <h3 class="FOh3">Liquid Brow Pen<br></h3>
-        <p>● Special tip that hugs that eyebrow for a more vivid and natural look.<br></p>
+        <h3 class="FOh3">Microblading Brow Pen<br></h3>
+        <p>Special tip that hugs that eyebrow for a more vivid and natural look.<br><br></p>
             </div>
     </div>
         </div>
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/5-13_series_CBG-01.jpg" alt="Cushion Brow Gel">
+      <img src="images/formula/40_Cushion%20Brow%20Gel-01.jpg" alt="Cushion Brow Gel">
             <div class="caption">
         <h3 class="FOh3">Cushion Brow Gel<br></h3>
-        <p>● Water-, oil-, and sweat-resistant. Fills and defines your eyebrows smoothly.<br></p>
+        <p>Water-, oil-, and sweat-resistant. Fills and defines your eyebrows smoothly.<br><br></p>
             </div>
     </div>
         </div>
-<!--old-->
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_44-01.jpg" alt="Waterproof Eyebrow Cream">
+      <img src="images/formula/43_Powder%20to%20Liquid%20Brow%20Color-01.jpg" alt="Powder to Liquid Brow Color">
             <div class="caption">
-        <h3 class="FOh3">Waterproof Eyebrow Cream<br></h3>
-        <p>● The smooth texture allows you to fill-in and re-define your brows easily to deliver a natural look.   <br>      ● Apply with an applicator to create a long-wearing and confident eyebrow look.<br></p>
+        <h3 class="FOh3">Powder to Liquid Brow Color<br></h3>
+        <p>Water in powder formula. Natural look & long-wearing. Goes with a spong applicator for filling bla.<br></p>
             </div>
     </div>
         </div>
 
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_46-01.jpg" alt="Eyebrow Mascara">
+      <img src="images/formula/46_Brow%20Tint-01.jpg" alt="Brow Tint">
             <div class="caption">
-        <h3 class="FOh3">Eyebrow Mascara<br></h3>
-        <p>● Gel texture with extremely fine color, long-lasting and sweat-resistant. Easy to wear for beginners! <br>      ● A mere slight brush to create those natural and attractive brows.<br><br><br><br><br></p>
-            </div>         
-    </div>
-</div>
-        <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_eyes_47-01.jpg" alt="Eyebrow Coating">
-            <div class="caption">
-        <h3 class="FOh3">Eyebrow Coating<br></h3>
-        <p>● Quick-drying. Used before or after other eyebrow wear.   <br>● Use it after eyebrow makeup for long-lasting effect.<br></p>
+        <h3 class="FOh3">Brow Tint<br></h3>
+        <p>Opague and covers well. Easy change of brow color.</p>
             </div>         
     </div>
 </div>
