--- a/formula_Eyeliner.html
+++ b/formula_Eyeliner.html
@@ -103,38 +103,37 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
      <div class="row">
 <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-13_eye_LEL-01.jpg" alt="Liquid Eyeliner">
+      <img src="images/formula/48_Eyeliner%20Gel-01.jpg" alt="Eyeliner Gel">
+            <div class="caption">
+        <h3 class="FOh3">Eyeliner Gel<br></h3>
+        <p>Water and sweat resistant, non-smudging, quick-drying, and non-drying.<br></p>
+            </div>
+    </div>
+        </div>
+<div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/49_Liquid%20Eyeliner-01.jpg" alt="Liquid Eyeliner">
             <div class="caption">
         <h3 class="FOh3">Liquid Eyeliner<br></h3>
-        <p>● Ultra black pigments, water- and smudge-proof.<br></p>
+        <p>Ultra black pigments, water- and smudge-proof.<br></p>
             </div>
     </div>
         </div>
 <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/3-14_eye_GELP-01.jpg" alt="Gel Eyeliner Pen">
-            <div class="caption">
-        <h3 class="FOh3">Gel Eyeliner Pen<br></h3>
-        <p>● Ultra fine tip for precise application. Water-resistant and long wearing.<br></p>
-            </div>
-    </div>
-        </div>
-<div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/3-15_eye_DEL-01.jpg" alt="Dip Eyeliner">
+      <img src="images/formula/50_Dip%20Eyeliner-01.jpg" alt="Dip Eyeliner">
             <div class="caption">
         <h3 class="FOh3">Dip Eyeliner<br></h3>
-        <p>● Metallic and glittery eyeliner. No smudges.<br></p>
+        <p>Metallic and glittery eyeliner. Continuous flow. Waterpoof and no smudges.</p>
             </div>
     </div>
         </div>
-<!--old-->
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_eyes_21-01.jpg" alt="Liner & Shadow Pencil">
+      <img src="images/formula/51_Gel%20Eyeliner%20Pen-01.jpg" alt="Gel Eyeliner Pen">
             <div class="caption">
-        <h3 class="FOh3">Liner & Shadow Pencil<br></h3>
-        <p>● Rich color eyeliner with soft formula. <br>      ● High pigment & smudge-proof.<br></p>
+        <h3 class="FOh3">Gel Eyeliner Pen<br></h3>
+        <p>Ultra fine tip for precise application. Long-wearing and waterproof, with air-tight packaging.<br></p>
             </div>
     </div>
         </div>
