--- a/formula_FACE.html
+++ b/formula_FACE.html
@@ -96,93 +96,97 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div style="height:20px;"></div>
 <ul class="nav nav-tabs nav-justified">
     <li role="presentation"  class="active"><a href="formula_FACE.html"><h4 class="FOh3">Foundation</h4></a></li>
-    <li role="presentation"><a href="formula_FConcealer.html"><h4>Corrector& Concealer</h4></a></li>
+    <li role="presentation"><a href="formula_FConcealer.html"><h4>Concealer</h4></a></li>
     <li role="presentation"><a href="formula_FPowder.html"><h4>Powder</h4></a></li>
 </ul>
      <div class="row">
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-12_face_LLLF-01.jpg" alt="Long Lasting Liquid Foundation">
+      <img src="images/formula/01_Primer-01.jpg" alt="Primer">
             <div class="caption">
-        <h3 class="FOh3">Long Lasting Liquid Foundation<br></h3>
-        <p>● High coverage with Hyaluronic acid and 
-Trehalose that moisturize your skin at the same time.</p>
+        <h3 class="FOh3">Primer<br></h3>
+        <p>A comfortable lightweight feel. Get a bright, even skin tone. Serves as a base for your foundation.</p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-13_face_BFC-01.jpg" alt="Bouncy Foundation Cake">
+      <img src="images/formula/02_Color%20Correcting%20Cream-01.jpg" alt="Color Correcting Cream">
             <div class="caption">
-        <h3 class="FOh3">Bouncy Foundation Cake<br></h3>
-        <p>● Cream to powder with a bouncy texture. <br><br><br><br></p>
+        <h3 class="FOh3">Color Correcting Cream<br></h3>
+        <p>SPF30. Breathable and Oil-control formula.  Correcting skin color.
+Paraben free. <br></p>
             </div>
     </div>
         </div>
          
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/5-11_series_CF-01.jpg" alt="Cushion Foundation">
+      <img src="images/formula/03_Tinted%20Moisturizer-01.jpg" alt="Tinted Moisturizer">
             <div class="caption">
-        <h3 class="FOh3">Cushion Foundation<br></h3>
-        <p>● Breathable, moisturizing, and long wearing with herbal essences and high coverage. <br><br><br></p>
+        <h3 class="FOh3">Tinted Moisturizer<br></h3>
+        <p>SPF15. Fresh silicone oil added. Skin tone correcting. Paraben free.<br><br></p>
             </div>
     </div>
-        </div>
-<!--old-->         
-        <div class="col-sm-6 col-md-4">
+        </div>        
+        <div class="col-sm-12 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_1-01.jpg" alt="Flawless BB Cream">
+      <img src="images/formula/04_Liquid%20Foundation-01.jpg" alt="Liquid Foundation">
             <div class="caption">
-        <h3 class="FOh3">Flawless BB Cream<br></h3>
-        <p>● An all-in-one facial cosmetic product to replace serum, moisturizer, primer, foundation and sunscreen.     <br>      ● The texture is supple and easy to apply, covers skin imperfections, while leaves skin soft & moisturized, creates the extremely smooth and flawless complexion as babies. </p>
             </div>
     </div>
         </div>
     
-         <div class="col-sm-6 col-md-4">
+         <div class="col-sm-12 col-md-8">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_2-01.jpg" alt="Oil-control BB Cream">
             <div class="caption">
-        <h3 class="FOh3">Oil-control BB Cream<br></h3>
-        <p>● Oil-control & long-wearing.    <br>      ● Mineral-based fornula, lightweight and natural, suitable for sensitive skin.   <br>       ● Combined whitening, anti-wrinkle, and sun protection effects. <br>● Covers the pores and corrects dull & uneven skin tone. <br></p>
+        <h3 class="FOh3">Liquid Foundation<br></h3>
+        <p>Weightless foundation create a flawless look. Paraben free. Water-proof.</p>
+        <h3 class="FOh3">24 Hour Foundation<br></h3>
+        <p>The long wear formula. Water-proof.</p>
+        <h3 class="FOh3">Healthy Glow Liquid Foundation<br></h3>
+        <p>Keeping skin hydrated. Water-proof. </p>
+        <h3 class="FOh3">Creamy Foundation<br></h3>
+        <p>Full coverage Matte. Water-proof.</p>
+        <h3 class="FOh3">Luminous Liquid Foundation<br></h3>
+        <p>SPF30. Brilliant coverage with added glow. Oil-control. Water-proof.</p>
             </div>
     </div>
         </div>
    
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_3-01.jpg" alt="CC Cream">
+      <img src="images/formula/05_BB%20Cream-01.jpg" alt="BB Cream">
+            <div class="caption">
+        <h3 class="FOh3">BB Cream<br></h3>
+        <p>Added fresh silicone oil. lightweight and extendable. Paraben free.<br></p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/06_CC%20Cream-01.jpg" alt="CC Cream">
             <div class="caption">
         <h3 class="FOh3">CC Cream<br></h3>
-        <p>● Brightens without blanching. Moisturizes and protects the skin with added mineral powder and hydrating essences.  <br>      ● Natural-born porcelain skin made easy!<br><br><br><br><br></p>
+        <p>Moisturizes your skin without an oily finish. Healthy-looking glow.<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_4-01.jpg" alt="Whitening CC Cream">
+      <img src="images/formula/07_Cushion%20Foundation-01.jpg" alt="Cushion Foundation">
             <div class="caption">
-        <h3 class="FOh3">Whitening CC Cream<br></h3>
-        <p>● Texture as soft as skin care product, water-based fornula gives a translucent & polished finish.   <br>      ● Brightens the skin and corrects the dull & uneven skin tone.    <br>● Added whitening formula to combine make-up & skin care in one step. <br>● Sun protection. <br></p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_6-01.jpg" alt="Creamy Foundation">
-            <div class="caption">
-        <h3 class="FOh3">Creamy Foundation<br></h3>
-        <p>● Lightweight & fresh, waterproof & sweat-resistant, gives a perfect look all day long.     <br>      ● Special minerial powder that transforms into creamy texture on the face to make your skin look perfect and bare.       <br> ● Conceals flaws and pores meticulously.   <br>● Sun protection.   <br> <br> <br> <br></p>
+        <h3 class="FOh3">Cushion Foundation<br></h3>
+        <p>Breathable, moisturizing, and long wearing with herbal essences and high coverage.<br></p>
             </div>         
     </div>
 </div>
           <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_7-01.jpg" alt="Foundation Stick">
+      <img src="images/formula/08_Cream%20to%20Powder%20Foundation-01.jpg" alt="Cream to Powder Foundation">
             <div class="caption">
-        <h3 class="FOh3">Foundation Stick<br></h3>
-        <p>● It has soft and smooth texture, and also high tractility.      <br>      ● Great versatility as foundation, concealer, lip base and touch-up.      <br> ● Added liquid nourishment. Skin care & makeup all in one.   <br>● Sun protection.   <br></p>
+        <h3 class="FOh3">Cream to Powder Foundation<br></h3>
+        <p>Brightening and long-lasting Cream to Powder technology create a perfect nataural look. With vitamin E. Paraben free.<br></p>
             </div>         
     </div>
 </div>
