--- a/formula_FConcealer.html
+++ b/formula_FConcealer.html
@@ -96,93 +96,45 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div style="height:20px;"></div>
 <ul class="nav nav-tabs nav-justified">
      <li role="presentation" ><a href="formula_FACE.html"><h4>Foundation</h4></a></li>
-    <li role="presentation" class="active"><a href="formula_FConcealer.html"><h4 class="FOh3">Corrector& Concealer</h4></a></li>
+    <li role="presentation" class="active"><a href="formula_FConcealer.html"><h4 class="FOh3">Concealer</h4></a></li>
     <li role="presentation"><a href="formula_FPowder.html"><h4>Powder</h4></a></li>
 </ul>
      <div class="row">
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-11_face_OCP-01.jpg" alt="Oil Control Primer">
+      <img src="images/formula/12_Liquid%20Concealer-01.jpg" alt="Liquid Concealer">
             <div class="caption">
-        <h3 class="FOh3">Oil Control Primer<br></h3>
-        <p>● Includes Hyaluronic acid and prevents oily skin with long staying power.</p>
+        <h3 class="FOh3">Liquid Concealer<br></h3>
+        <p>Long wearing concealer that covers imperfections effortlessly.</p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-18_face_CPen-01.jpg" alt="Concealer Pen">
+      <img src="images/formula/11_Concealer%20Pen-01.jpg" alt="Concealer Pen">
             <div class="caption">
         <h3 class="FOh3">Concealer Pen<br></h3>
-        <p>● Highly effective concealer in convenient click pen.</p>
+        <p>Highly effective concealer in convenient click pen packaging for easy application.</p>
             </div>
     </div>
         </div>
                  <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-19_face_LC-01.jpg" alt="Liquid Concealer">
+      <img src="images/formula/10_Concealer-01.jpg" alt="Concealer">
             <div class="caption">
-        <h3 class="FOh3">Liquid Concealer<br></h3>
-        <p>● Long wearing concealer that covers imperfections effortlessly.</p>
+        <h3 class="FOh3">Concealer<br></h3>
+        <p>High-coverage light and smooth texture create a natural look. Paraben free.</p>
             </div>
     </div>
         </div>        <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-20_face_CS-01.jpg" alt="Concealer  Stick">
+      <img src="images/formula/13_Concealer%20Stick-01.jpg" alt="Concealer  Stick">
             <div class="caption">
         <h3 class="FOh3">Concealer Stick<br></h3>
-        <p>● Highly effective concealer that moisturizes and replenishes with added Ceramide.</p>
+        <p>Highly effective concealer that moisturizes and replenishes with added Ceramide.</p>
             </div>
     </div>
-        </div>
-              <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/2-21_face_ConcealerP-01.jpg" alt="Concealer Palette">
-            <div class="caption">
-        <h3 class="FOh3">Concealer Palette<br></h3>
-        <p>● Highly effective concealer that moisturizes and replenishes with added Ceramide.</p>
-            </div>
-    </div>
-        </div>
-         
-<!--old-->
-        <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_21-01.jpg" alt="Primer">
-            <div class="caption">
-        <h3 class="FOh3">Primer<br></h3>
-        <p>● Natural hydrating complex that moisturizes the skin and keeps the lines off your face.    <br> ● Keeps makeup fresh all day. <br> ● Fragrance free. <br><br><br><br></p>
-            </div>
-    </div>
-        </div>
-   
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_23-01.jpg" alt="Corrector">
-            <div class="caption">
-        <h3 class="FOh3">Corrector<br></h3>
-        <p>● Brightens skin, oil-control, long-wearing.   <br> ● Added mineral powder to absorb excessive oil on face.  <br>● Brightens skin, oil-control, long-wearing.   <br> ● Fragrance free.  <br><br><br><br><br></p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_24-01.jpg" alt="Protector">
-            <div class="caption">
-        <h3 class="FOh3">Protector<br></h3>
-        <p>● Added micro pearl powder to create natural and delicate skin.    <br>      ● Enhances skin tone & brightens skin.      <br>● Hydrating & water-based formula(Hyaluromic acid & Glycerine) produces moist and smooth effect.<br>● Fragrance free.<br></p>
-            </div>
-    </div>
-        </div>
-           <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_29-01.jpg" alt="Pore Balm">
-            <div class="caption">
-        <h3 class="FOh3">Pore Balm<br></h3>
-        <p>● A primer that facilitates a perfect fit and long-lasting effect.      <br>      ● The moisturizing and fresh texture controls and covers the pores effectively. <br></p>
-            </div>         
-    </div>
-</div>
+        </div>         
     </div>
 </div>
     </div>
