--- a/formula_FPowder.html
+++ b/formula_FPowder.html
@@ -94,65 +94,57 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div style="height:20px;"></div>
 <ul class="nav nav-tabs nav-justified">
      <li role="presentation" ><a href="formula_FACE.html"><h4>Foundation</h4></a></li>
-    <li role="presentation"><a href="formula_FConcealer.html"><h4>Corrector& Concealer</h4></a></li>
+    <li role="presentation"><a href="formula_FConcealer.html"><h4> Concealer</h4></a></li>
     <li role="presentation" class="active"><a href="formula_FPowder.html"><h4 class="FOh3">Powder</h4></a></li>
 </ul>
      <div class="row">
       <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-15_face_PSP-01.jpg" alt="Pressed Setting Powder">
+      <img src="images/formula/14_UV%20Block%20Foundation-01.jpg" alt="UV Block Foundation">
             <div class="caption">
-        <h3 class="FOh3">Pressed Setting Powder<br></h3>
-        <p>● Soft, translucent powders that help minimize imperfections.<br></p>
+        <h3 class="FOh3">UV Block Foundation<br></h3>
+        <p>With silicone oil & skin friendly oil. Effectively blocks UVA & UVB.
+Paraben free.<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-16_face_PPF-01.jpg" alt="Pressed Powder Foundation">
+      <img src="images/formula/15_Two-way%20Cake-01.jpg" alt="Two-way Cake">
             <div class="caption">
-        <h3 class="FOh3">Pressed Powder Foundation<br></h3>
-        <p>● This powder foundation evens the complexion and gives you a flawless skin.<br></p>
+        <h3 class="FOh3">Two-way Cake<br></h3>
+        <p>Added sunscreen agent(SPF15). Long lasting and waterproof. Fine and smooth powders that adhere to skin perfectly.
+Paraben free.<br></p>
             </div>
     </div>
          </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-23_face_WTWC-01.jpg" alt="Waterproof Two-Way Cake">
+      <img src="images/formula/16_Perfect Coverage Foundation-01.jpg" alt="Perfect Coverage Foundation">
             <div class="caption">
-        <h3 class="FOh3">Waterproof Two-Way Cake<br></h3>
-        <p>● Waterproof and long-wearing. Can be used dry or wet for different skin conditions.</p>
+        <h3 class="FOh3">Perfect Coverage Foundation<br></h3>
+        <p>Pressed powder foundation compact with perfect coverage that conceals imperfections.</p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-17_face_LP-01.jpg" alt="Loose Powder">
+      <img src="images/formula/17_Loose%20Setting%20Powder-01.jpg" alt="Loose Setting Powder">
             <div class="caption">
-        <h3 class="FOh3">Loose Powder<br></h3>
-        <p>● Ultra fine particles that help to reduce shine and pores.<br><br><br></p>
+        <h3 class="FOh3">Loose Setting Powder<br></h3>
+        <p>With Aloe oil extract. Brightening and long wearing. Paraben free.<br><br><br></p>
             </div>
     </div>
         </div>
-<!--old-->
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_41-01.jpg" alt="Mineral Pressed Powder">
+      <img src="images/formula/18_Setting%20Powder-01.jpg" alt="Setting Powder">
             <div class="caption">
-        <h3 class="FOh3">Mineral Pressed Powder<br></h3>
-        <p>● Long-lasting hydration and smooth texture with no meltdown. <br>● Creates a natural young look with flawless and lightweight coverage.     <br>● All natural ingredients that will not burden or block the pores. <br> <br><br><br></p>
+        <h3 class="FOh3">Setting Powder<br></h3>
+        <p>Light & non-sticky texture gives face a perfect matte finish. Paraben free.<br></p>
             </div>
     </div>
         </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_46-01.jpg" alt="Mineral Loose Powder">
-            <div class="caption">
-        <h3 class="FOh3">Mineral Loose Powder<br></h3>
-        <p>● Mineral-enhanced oil control. Fragrance and preservatives free. Suitable for combination and sensitive skin types.     <br>      ● All natural ingredients that won't burden or block the pores. <br> ● Long-wearing and no meltdown.  <br>● The flat micro-particles create smooth, soft, and perfect complexion. <br><br><br><br></p>
-            </div>         
-    </div>
-</div>
     </div>
 </div>
     </div>
